--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello, world!
+<body style="margin: 0;">
+    <div style="display: flex; align-items: center; justify-content: center; width: 100%; position: absolute; bottom: 0;">
+        <img src="./ish.png"/>
+    </div>
+</body>
+
