--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <body style="margin: 0; overflow: hidden;">
-    <div id="ish" style="display: flex; align-items: center; justify-content: center; width: 100%; position: absolute; bottom: 0;">
+    <div id="ish" style="display: flex; align-items: center; justify-content: center; width: 100%; position: absolute; bottom: -150px;">
         <img src="./ish.png"/>
     </div>
 
     <script>
-        let position = 0;
+        let position = 150;
 
         window.addEventListener('wheel', function(e) {
             var ishElement = document.getElementById('ish');
